--- a/confirmation_code.html
+++ b/confirmation_code.html
@@ -1,19 +1,33 @@
 <!DOCType HTML>
-<html>
+<html lang="en">
 
 <head>
-  <title>🤖 Beep boop!</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Confirmation code</title>
 </head>
 
 <body>
   <center>
-    <h1 id="target"></h1>
+    <h1 id="target">Loading time ...</h1>
+    <h2 id="prev-target"></h2>
   </center>
   <script type="text/javascript">
     const target = document.getElementById("target");
+    const prevTarget = document.getElementById("prev-target");
     const interval = 60;
-    const secondsSinceEpoch = Math.floor(new Date().getTime() / 1000 / interval) * 7919357;
-    target.innerHTML = secondsSinceEpoch.toString().slice(-6);
+
+    fetch("https://worldtimeapi.org/api/timezone/Etc/UTC")
+      .then(res => res.json())
+      .then(res => {
+        const secondsSinceEpoch = res.unixtime;
+        const code = Math.floor(secondsSinceEpoch / interval) * 7919357;
+        const prevCode = Math.floor(secondsSinceEpoch / interval - 1) * 7919357;
+        target.innerHTML = code.toString().slice(-6);
+        prevTarget.innerHTML = "Previous value: " + prevCode.toString().slice(-6);
+      })
+      .catch(() => target.innerHTML = "ERROR");
   </script>
 </body>
 
